<resources>
    <string name="app_name">OpenDelta</string>
    <string name="title">System updates</string>
    <string name="updater_title">MicaOS Updater</string>
    <string name="action_about">About</string>
    <string name="about_content" translatable="false" >
<![CDATA[
        Copyright &copy; _COPYRIGHT_OPENDELTA_ <b>Jorrit \'Chainfire\' Jongma</b><br>
        <br>
        Originally created for <b>The OmniROM Project</b><br>
        <br>
        This improved fork is by <b>Yet Another AOSP Project (YAAP)</b><br>
        <br>
        Licensed under the terms of the <b>GNU General Public License, version 3.0 (GPLv3)</b><br>
        <br>
        Delta decoding based on <b>xdelta</b>, copyright &copy; _COPYRIGHT_XDELTA_ <b>Joshua MacDonald</b><br>
    ]]>
    </string>
    <string name="state_action_none">Your system is up to date</string>
    <string name="state_action_checking">Checking for updates &#8230;</string>
    <string name="state_action_checking_sum">Verifying file &#8230;</string>
    <string name="state_action_searching">Searching for files &#8230;</string>
    <string name="state_action_searching_sum">Verifying file &#8230;</string>
    <string name="state_action_downloading">Downloading &#8230;</string>
    <string name="state_action_downloading_paused">Downloading paused</string>
    <string name="state_action_applying">Patching &#8230;</string>
    <string name="state_action_applying_patch">Patching &#8230;</string>
    <string name="state_action_applying_sum">Verifying file &#8230;</string>
    <string name="state_action_ready">Update ready to flash</string>
    <string name="state_error_disk_space">Not enough disk space</string>
    <string name="state_error_unknown">Unknown error</string>
    <string name="state_error_unofficial">OTA Updates disabled</string>
    <string name="state_error_incremental_unavailable">Incremental updates unavailable\nFallen Back to Full update\nTry Again</string>
    <string name="error_disk_space_sub" formatted="false">%d MiB available, %d MiB required</string>
    <string name="notify_update_available">An update is available</string>
    <string name="notify_checking">Checking for update &#8230;</string>
    <string name="last_checked" formatted="false">%s at %s</string>
    <string name="last_checked_never">We\'ve never checked, maybe you would like to do so?</string>
    <string name="button_check_short">Check</string>
    <string name="button_check_now">Check for update &#8230;</string>
    <string name="button_flash_now">Flash</string>
    <string name="button_pause_text">Pause</string>
    <string name="button_resume_text">Resume</string>
    <string name="button_stop_text">Cancel</string>
    <string name="button_ignore_text">Ignore</string>
    <string name="button_yes_text">Yes</string>
    <string name="button_no_text">No</string>
    <string name="state_action_a_flash_verify">Verifying A-only Update &#8230;</string>
    <string name="state_action_a_flash_prep">Preparing A-only Update &#8230;</string>
    <string name="state_action_a_flash_install">Rebooting to install &#8230;</string>
    <string name="state_action_ab_flash">Installing System Update &#8230;</string>
    <string name="state_action_ab_paused">System Update paused</string>
    <string name="state_action_ab_finished">Done Installing. Reboot Now</string>
    <string name="button_reboot_short">Reboot</string>
    <string name="state_action_flash_file_ready">Update ready to Install</string>
    <string name="state_action_flash_file_no_sum">No local sum file found</string>
    <string name="state_action_flash_file_invalid_sum">Mismatch with local sum file</string>
    <string name="qs_check_title">Check for updates</string>
    <string name="qs_check_checking">Checking...</string>
    <string name="qs_check_error">Error</string>
    <string name="qs_check_uptodate">Up to date</string>
    <string name="action_secure_mode">Secure</string>
    <string name="secure_mode_enabled_title">Secure mode: enabled</string>
    <string name="secure_mode_enabled_description"><![CDATA[The update\'s cryptographic signature will be verified before flashing to confirm its origin, and no additional updates will be flashed. This mode is only compatible with <b>TWRP</b>.]]></string>
    <string name="secure_mode_disabled_title">Secure mode: disabled</string>
    <string name="secure_mode_disabled_description"><![CDATA[Additional updates are flashed if present. Note that any (malicious) software package can place these updates and gain full system access. Caution is advised.]]></string>
    <string name="recovery_notice_title">Notice</string>
    <string name="recovery_notice_description_not_secure"><![CDATA[Flashing updates in the current mode is only officially supported on <b>TWRP</b> recoveries. <i>Official</i> <b>CWM</b> builds are <i>not</i> supported, though some <i>community-built</i> versions of <b>CWM</b> <i>may</i> still work. Please make sure you are running a compatible recovery before continuing.]]></string>
    <string name="recovery_notice_description_reboot"><![CDATA[The device will now reboot to AOSP recovery to install the update]]></string>
    <string name="flash_after_update_notice_title">Notice</string>
    <string name="state_error_not_official_extra" formatted="false">OTA is unavailable. Use local update</string>
    <string name="button_build_delta">Download</string>
    <string name="button_stop">Stop</string>
    <string name="state_action_available">Update available</string>
    <string name="state_action_build_full">Full update is possible</string>
    <string name="state_error_download">Download problem</string>
    <string name="state_error_download_extra_1">Can\'t fetch the newest build\nCheck your network connection and DNS settings</string>
    <string name="state_error_download_extra_2">No sum file was found on the server\nTalk with your maintainer</string>
    <string name="state_error_download_extra_3">@string/state_error_connection</string>
    <string name="state_error_download_extra_4">Server response malformed\nTalk with your maintainer</string>
    <string name="state_error_download_extra_sha">corrupted file</string>
    <string name="state_error_download_extra_resume">resume-able</string>
    <string name="text_current_version_header_title">Current version:</string>
    <string name="text_ziptype_header_title">Build type:</string>
    <string name="text_updatetype_header_title">Update type:</string>
    <string name="text_update_type_incremental">Incremental Update</string>
    <string name="text_update_type_full">Full Update</string>
    <string name="text_last_checked_header_title">Last checked:</string>
    <string name="text_update_version_title">Update version:</string>
    <string name="text_download_size_header_title">Download size:</string>
    <string name="text_download_size_unknown">Unknown</string>
    <string name="auto_download">Schedule</string>
    <string name="auto_download_title">Scheduler action</string>
    <string name="download_disabled">Disabled</string>
    <string name="text_changelog_header_title">Changelog:</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_error">Failed to load changelog</string>
    <string name="check_only">Check and notify</string>
    <string name="download_full">Auto download all</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_info">Info</string>
    <string name="menu_changelog">Changelog</string>
    <string name="category_download">Auto download</string>
    <string name="charge_only_title">Charger only</string>
    <string name="charge_only_message">Download only when on charger</string>
    <string name="battery_level_title">Min battery percent</string>
    <string name="twenty_five_percent" translatable="false" >25</string>
    <string name="fifty_percent" translatable="false" >50</string>
    <string name="seventy_five_percent" translatable="false" >75</string>
    <string name="notify_title_error">Problem checking for update</string>
    <string name="notify_title_flash">Update ready to flash</string>
    <string name="notify_title_download">Update ready to download</string>
    <string name="notify_download_remaining_kib" formatted="false">%2d%% · %.0f KiB/s · %02d:%02d</string>
    <string name="notify_download_remaining_mib" formatted="false">%2d%% · %.0f MiB/s · %02d:%02d</string>
    <string name="notify_eta_remaining" formatted="false">%2d%% · %02d:%02d remaining</string>
    <string name="notify_eta_remaining_short" formatted="false">%dm %ds</string>
    <string name="notify_eta_remaining_short_sec" formatted="false">%ds</string>
    <string name="last_checked_never_title_new">Press \'Check\' to start</string>
    <string name="screen_state_title">Screen off</string>
    <string name="screen_state_message">Download only when screen is off</string>
    <string name="category_scheduler">Auto update</string>
    <string name="scheduler_mode_title">Scheduler mode</string>
    <string name="scheduler_smart">Smart</string>
    <string name="scheduler_daily">Daily</string>
    <string name="scheduler_weekly">Weekly</string>
    <string name="scheduler_hourly">Hourly</string>
    <string name="scheduler_daily_time">Time</string>
    <string name="scheduler_week_day">Day</string>
    <string name="scheduler_hourly_time_title">Check every</string>
    <string name="unit_hour">1 hour</string>
    <string name="unit_hours" formatted="false">%d hours</string>
    <string name="scheduler_sleep_enabled_title">Sleep detection</string>
    <string name="scheduler_sleep_enabled_summary">Attempt to check for updates when the screen is off for 5 hours straight</string>
    <string name="metered_networks_title">Metered networks</string>
    <string name="metered_networks_message">Allow auto downloading on metered networks</string>
    <string name="category_flashing">Flashing</string>
    <string name="state_error_connection">No network connection available</string>
    <string name="category_admin">Maintenance</string>
    <string name="show_info_title">Show info</string>
    <string name="show_info_summary">Show explanation / info text in main page</string>
    <string name="force_reflash_title">Force Reflash</string>
    <string name="force_reflash_summary">Show latest update as available again\nEven if it\'s not newer</string>
    <string name="force_flash_feedback">Now go back and download/install\nPress check to cancel this action</string>
    <string name="clear_files_title">Clean update files</string>
    <string name="clear_files_summary">Delete existing update files to force downloading full update</string>
    <string name="clean_files_feedback" formatted="false">Deleted %d files. Now press \'Check for updates\'</string>
    <string name="category_test_mode">Test mode</string>
    <string name="test_mode_title">Test mode</string>
    <string name="test_mode_summary">Recieve beta updates</string>
    <string name="test_mode_ribbon_text">TEST MODE</string>
    <string name="state_error_permissions">No storage permissions</string>
    <string name="state_error_flash">Failed preparing for A-only flash</string>
    <string name="progress_status_0">Idle &#8230;</string>
    <string name="progress_status_1">Checking for Updates &#8230;</string>
    <string name="progress_status_2">Update available &#8230;</string>
    <string name="progress_status_3">Installing &#8230;</string>
    <string name="progress_status_4">Verifying &#8230;</string>
    <string name="progress_status_5">Finalizing &#8230;</string>
    <string name="progress_status_6">Update completed. A reboot is pending &#8230;</string>
    <string name="progress_status_7">Reporting Error Event &#8230;</string>
    <string name="progress_status_8">Attempting Rollback &#8230;</string>
    <string name="progress_status_9">Disabled.</string>
    <string name="button_select_file">File</string>
</resources>